<resources>
    <string name="app_name">Noties</string>
    <string name="app_name_pantalla">NOTIES ✔</string>
    <string name="btPrimerAnio">1° año</string>
    <string name="btMatematica">Matemática</string>
    <string name="title_activity_actividad_matematica">ActividadMatematica</string>
    <string name="tab_text_1">Principal</string>
    <string name="tab_text_2">Extras</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btVerPdf">VER PDF</string>
    <string name="seleccionAño">seleccionAño</string>
    <string name="seleccionAño2">SELECCIONE AÑO</string>
    <string name="btSegundoAnio">2° AÑO</string>
    <string name="tvMateria">SELECCIONE MATERIA</string>
    <string name="btLogica">LÓGICA Y ESTRUCTURA DE DATOS</string>
    <string name="btTecnologia">TECNOLOGÍA DE LA INFORMACIÓN</string>
    <string name="btIngenieriaI">INGENIERÍA DE SOFTWARE I</string>
    <string name="btAdministracion">Administración</string>
    <string name="btInglesI">INGLÉS I</string>
    <string name="title_activity_actividad_logica">ActividadLogica</string>
    <string name="Unidad">Unidad 1</string>
    <string name="tvPrueba">ACÁ VAN LAS COSAS DEL PRINCIPAL LOGICA</string>
    <string name="tvPruebaExtras">ACÁ VAN LAS COSAS EXTRAS DE LOGICA</string>
    <string name="btEnviar">Enviar</string>
    <string name="btBotonVerPdf">Ver PDF</string>
    <string name="btDescargar">Descargar</string>
    <string name="btpagina_web">Pagina Web</string>
    <string name="tx_explicacion">Seleccione año para ver sus materias. (El contenido de cada materia se divide en “Principal” y “Extras”).</string>
    <string name="tx_advertencia">El contenido compartido en “Extras”, no asegura que este formalmente correcto a cargo de la institución, su uso queda totalmente a criterio del usuario.</string>
    <string name="btVerLink">VER LINK</string>
    <string name="renglon1">-Conjuntos</string>
    <string name="renglon2">-Arreglos</string>
    <string name="renglon3">-Diagramas</string>
    <string name="btIngenieria">Ingeniería de Software I</string>
    <string name="btBotonVerPdf2">ver pdf</string>
    <string name="nombre_matematica">MATEMÁTICAS</string>
    <string name="name_configuracion">Configuración</string>
    <string name="unidad2">Unidad 2</string>
    <string name="link1">-Link 1</string>
    <string name="name_ing">INGENIERÍA DE SOFTWARE I</string>
    <string name="name_link">-Link</string>
    <string name="tema">-Tema</string>
    <string name="tvIsoPrincipal1">Primera Parte</string>
    <string name="tvIsoPrincipal2">Segunda Parte</string>
    <string name="tvIsoPrincipal3">Unidad 2</string>
    <string name="tvIsoPrincipal4">Casos de Uso</string>
    <string name="tvIsoPrincipal5">Casos de uso - Cajero</string>
    <string name="tvIsoUnidad3">Unidad 3</string>
    <string name="tvIsoUnidad4">Unidad 4</string>
    <string name="tvIsoPrincipal6">Unidad 3</string>
    <string name="tvIsoPrincipal7">Unidad 4</string>
    <string name="tvIsoPrincipal9">Diagrama de clases - Relaciones</string>
    <string name="tvIsoPrincipal10">Diagrama de clases - Explicación y ejemplo</string>
    <string name="tvIsoResumenes">Resumenes</string>
    <string name="tvIsoExtras1">1° Resumen sobre 1er parcial 2018</string>
    <string name="tvIsoExtras2">2° Resumen sobre 1er parcial 2018</string>
    <string name="tvIsoExtras3">1° Resumen sobre 2do parcial 2018</string>
    <string name="btAcercaDe">Acerca de</string>
    <string name="tvIsoTps">Trabajos Prácticos</string>
    <string name="tvIsoExtras4">TP N°1 - 2018</string>
    <string name="tvIsoExtras5">TP N°2 - 2018</string>
    <string name="tvIsoTutoriales">Videotutoriales</string>
    <string name="tvIsoExtras6">Introducción a UML</string>
    <string name="tvIsoExtras7">Diagrama de clases</string>
    <string name="tvIsoExtras8">Diagrama de estados</string>
    <string name="btLink">IR</string>
    <string name="text_acerca_1">Términos de Uso:</string>
    <string name="text_acerca_2">¡Bienvenido a Noties!</string>
    <string name="text_acerca_3">Estos Términos de uso establecen el uso y proporcionan información sobre el Servicio de Noties.  Cuando usa Noties, acepta estos términos.</string>
    <string name="text_acerca_4">Noties es producto propio regularizado, provisto por sus desarroladores, por lo tanto, constituyen un acuerdo entre usted y Noties Serv.</string>
    <string name="text_acerca_5">El servicio de Noties</string>
    <string name="text_acerca_6">Aceptamos proporcionarle el Servicio de Noties.  El Servicio incluye todas las características, aplicaciones, tecnologías y software que ofrecemos para avanzar en la misión de Noties: facilitar el acceso al material de estudio y más.</string>
    <string name="text_acerca_7">Desarroladores: Silvestre Adriel y Magi Guido</string>
    <string name="text_acerca_8">Colaboración especial: Prof. Mario Finos</string>
    <string name="text_acerca_9">Actualizado: 31/10/2019</string>
    <string name="btComunicacion">Comunicación</string>
    <string name="btUdi">Unidad de definición institucional I</string>
    <string name="btSO">Sistemas Operativos</string>
    <string name="btProbSoc">Problemas Socio Contemp.</string>
    <string name="btUdi2">Unidad de definición institucional II</string>
    <string name="btIngles2">Inglés II</string>
    <string name="btIDE">Innovación y desarrollo emprendedor</string>
    <string name="btEstadistica">Estadística</string>
    <string name="btProgramacion">Programación I</string>
    <string name="btBD">Base de datos I</string>
    <string name="btISO2">Ingeniería de software II</string>
    <string name="btPracProf">Práctica Prof. I</string>
    <string name="tabPrinc">Principal</string>
    <string name="tabExtras">Extras</string>


</resources>
