<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AcercaDe">

    <ScrollView
        android:layout_width="293dp"
        android:layout_height="514dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.298">

        <LinearLayout

            android:id="@+id/gra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:text="@string/text_acerca_1" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:layout_gravity="center"
                android:foregroundGravity="center" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:text="@string/text_acerca_2" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="17dp"
                android:layout_gravity="center"
                android:foregroundGravity="center" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:text="@string/text_acerca_3" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:foregroundGravity="center" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:text="@string/text_acerca_4" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:foregroundGravity="center" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:text="@string/text_acerca_5" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="12dp"
                android:layout_gravity="center"
                android:foregroundGravity="center" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:text="@string/text_acerca_6" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="26dp"
                android:layout_gravity="center"
                android:foregroundGravity="center" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:text="@string/text_acerca_7" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:foregroundGravity="center" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:text="@string/text_acerca_8" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:foregroundGravity="center" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:text="@string/text_acerca_9" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>