<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#202732"
tools:context=".IngenieriaIExtrasFragment">

<!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="@string/tx_advertencia"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvIsoResumenes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/tvIsoResumenes"
                        android:textSize="28sp" />

                </LinearLayout>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#4A5E4F4F">

                        <TextView
                            android:id="@+id/tvIsoExtras1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="8dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginBottom="13dp"
                            android:fontFamily="@font/average"
                            android:text="@string/tvIsoExtras1"
                            android:textSize="18sp" />

                        <Button
                            android:id="@+id/btBotonVerPdf10"
                            android:layout_width="70dp"
                            android:layout_height="30dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="12dp"
                            android:layout_marginBottom="8dp"
                            android:background="@drawable/boton_circular"
                            android:text="@string/btBotonVerPdf" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="325dp">

                        <TextView
                            android:id="@+id/tvIsoExtras2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="8dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginBottom="13dp"
                            android:fontFamily="@font/average"
                            android:text="@string/tvIsoExtras2"
                            android:textSize="18sp" />

                        <Button
                            android:id="@+id/btBotonVerPdf11"
                            android:layout_width="70dp"
                            android:layout_height="30dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="12dp"
                            android:layout_marginBottom="8dp"
                            android:background="@drawable/boton_circular"
                            android:text="@string/btVerPdf" />

                    </TableRow>

                    <TableRow
                        android:layout_width="304dp"
                        android:layout_height="wrap_content"
                        android:background="#4A5E4F4F">

                        <TextView
                            android:id="@+id/tvIsoExtras3"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="8dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginBottom="13dp"
                            android:fontFamily="@font/average"
                            android:text="@string/tvIsoExtras3"
                            android:textSize="18sp" />

                        <Button
                            android:id="@+id/btBotonVerPdf12"
                            android:layout_width="70dp"
                            android:layout_height="30dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="12dp"
                            android:layout_marginBottom="8dp"
                            android:background="@drawable/boton_circular"
                            android:text="@string/btVerPdf" />

                    </TableRow>

                </TableLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>